--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --watch app.js"
   },
   "dependencies": {
     "express": "^5.1.0"
